apps/uptime-kuma/service.yml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
  labels:
    app: uptime-kuma
spec:
  type: NodePort
  ports:
    # Maps the container's port to 80. If you want to use it on a different port, change it here.
    - port: 3001
      targetPort: 3001
      protocol: TCP
  selector:
    app: uptime-kuma
