apps/uptime-kuma/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: stepca-prod
spec:
  rules:
  - host: uptime.kube.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: uptime-kuma
            port:
              number: 3001
  tls:
    - secretName: uptime-tls
      hosts:
        - uptime.kube.home
